# holocron

./: .gitignore  .prettierignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: buildDeploy.yml
data/: compileOrbitalProp.sh  createDatabase.sh  dataFetcher.py  holocron-db.sql  testOrbitalProp.mjs  testOrbitalProp.sh
orbital_propagator/: Cargo.toml  compileOrbitalProp.sh  testOrbitalProp.mjs
orbital_propagator/src/: lib.rs  objects.rs  orbits.rs  util.rs
public/data/: .gitignore  holocron.db
src/: App.tsx  main.tsx  vite-env.d.ts
src/ballistic-missions/: index.ts  mission-control-dialog.tsx  selected-mission-dialog.tsx  thread-level.tsx  thread-levels.ts
src/components/: distance-from-earth.tsx  index.ts
src/components/dialogs/selected-object-dialog/: cute-rocket.tsx  index.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  index.ts  radio-group.tsx  slider.tsx
src/contexts/: DatabaseContext.tsx  OrbitalPropagatorContext.tsx
src/filter/: Columns.tsx  DataTable.tsx  Filter.tsx  Results.tsx  Table.tsx
src/orrery/: Object.tsx  OrbitPropagatorContext.tsx  Orrery.tsx  Planet.tsx  SelectedPlanetDialog.tsx  coordinates.ts  get-coordinates.ts
src/orrery/scenes/: MainScene.tsx
src/styles/: index.css
src/types/: PlanetType.ts  SmallBodyType.ts
