[package]
name = "orbital_propagator"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.test]
overflow-checks = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
